adding basic layout

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <script defer src="./app2.js"></script>
+    <link rel="stylesheet" href="./main.css">
 </head>
 <body>
+
+    <div id="output"></div>
 
 </body>
 </html>
