adding more layout

--- a/index.html
+++ b/index.html
@@ -9,8 +9,15 @@
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-
+    <nav>
+        <h1>Array GPS &hearts; &mdash; voidlaszlo</h1>
+        <small> (only working on 3x3 for now)</small>
+    </nav>
     <div id="output"></div>
+    <button>search</button>
+    <p>The 1 wants to find the next 1 in the array, if there is one. The 2s are the walls, you can't go through them.</p>
+    <small>(It can't find the shortest way, but it can find the way if there is one.)</small>
+    <small>&dash; You can't change the layout for now.</small>
 
 </body>
 </html>
